--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~15.1.3",
+    "@angular/animations": "^15.1.3",
     "@angular/cdk": "^14.2.7",
-    "@angular/common": "~15.1.3",
-    "@angular/compiler": "~15.1.3",
-    "@angular/core": "~15.1.3",
-    "@angular/forms": "~15.1.3",
-    "@angular/localize": "~15.1.3",
+    "@angular/common": "^15.1.3",
+    "@angular/compiler": "^15.1.3",
+    "@angular/core": "^15.1.3",
+    "@angular/forms": "^15.1.3",
+    "@angular/localize": "^15.1.3",
     "@angular/material": "^13.3.9",
-    "@angular/platform-browser": "~15.1.3",
-    "@angular/platform-browser-dynamic": "~15.1.3",
-    "@angular/router": "~15.1.3",
+    "@angular/platform-browser": "^15.1.3",
+    "@angular/platform-browser-dynamic": "^15.1.3",
+    "@angular/router": "^15.1.3",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.10",
-    "@angular/cli": "~13.3.10",
-    "@angular/compiler-cli": "~15.1.3",
-    "@angular/language-service": "~15.1.3",
+    "@angular-devkit/build-angular": "^14.2.10",
+    "@angular/cli": "^14.2.10",
+    "@angular/compiler-cli": "^15.1.3",
+    "@angular/language-service": "^15.1.3",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
