--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@angular/platform-browser": "^15.1.3",
     "@angular/platform-browser-dynamic": "^15.1.3",
     "@angular/router": "^15.1.3",
-    "ngx-toastr": "^14.0.0",
-    "rxjs": "~6.5.4",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "ngx-toastr": "^16.0.2",
+    "rxjs": "^7.8.0",
+    "tslib": "^2.5.0",
+    "zone.js": "^0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.4",
