--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vdotok",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -43,5 +43,16 @@
     "eslint": "^8.31.0",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.5"
-  }
+  },
+  "description": "This is a demo project to demonstrate One to One and Group Chat with Angular 15+.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vdotok/JS-chat.git"
+  },
+  "author": "VDOTOK",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/vdotok/JS-one2one/issues"
+  },
+  "homepage": "https://github.com/vdotok/JS-one2one#readme"
 }
