--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^15.1.3",
     "@angular/platform-browser-dynamic": "^15.1.3",
     "@angular/router": "^15.1.3",
+    "axios": "^1.4.0",
     "ngx-toastr": "^16.0.2",
     "rxjs": "^7.8.0",
     "tslib": "^2.5.0",
