--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^15.1.3",
     "axios": "^1.4.0",
     "ngx-toastr": "^16.0.2",
+    "path": "^0.12.7",
     "rxjs": "^7.8.0",
     "tslib": "^2.5.0",
     "zone.js": "^0.12.0"
